Don't prevent wrapping in the packages package column unless the viewport is screen-md-min or larger

--- a/resources/assets/less/website/packages.less
+++ b/resources/assets/less/website/packages.less
@@ -63,7 +63,9 @@ body.packages {
         }
 
         &.packages-table {
-            .pcks-col { white-space: nowrap; }
+            .pcks-col {
+                @media (min-width: @screen-md-min) { white-space: nowrap; }
+            }
 
             .repo-col {
                 width: 135px;
